<resources>
    <string name="app_name" translatable="false">WHIB</string>

    <!-- URL -->
    <string name="url_privacy_policy" translatable="false">https://mrthegood.github.io/whib/privacypolicy</string>
    <string name="url_github" translatable="false">https://github.com/MrTheGood/projectb_android</string>

    <!-- Menu -->
    <string name="menu_map">Map</string>
    <string name="menu_memories">Memories</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_memory">Memory</string>
    <string name="menu_add_memory">New memory</string>

    <!-- Strings -->
    <string name="str_enter_adress">Enter address</string>
    <string name="str_search">Search by title, country or description</string>
    <string name="string_enable_analytics">Send anonymous usage statistics</string>
    <string name="string_enable_crashlytics">Send anonymous crash logs</string>
    <string name="str_onboarding_map">See Where You Have Been</string>
    <string name="str_onboarding_map_description">Easily view all the places where you have been on the map page!</string>
    <string name="str_onboarding_share">Share Your Memories</string>
    <string name="str_onboarding_share_description">Simply share your memories on WhatsApp, Telegram or Facebook!</string>
    <string name="str_tutorial_longpress">Long press to add memories</string>
    <string name="str_log_in">Log In</string>
    <string name="str_set_password">Set Password</string>
    <string name="str_enable_password">Enable password</string>
    <string name="str_use_fingerprint">Use fingerprint</string>

    <!--Drawer-->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="drawer_filter_location">location</string>
    <string name="drawer_filter_date">date</string>
    <string name="drawer_filter_marker">marker</string>


    <!-- Alert dialog -->
    <string name="dialog_add_media">Add Media</string>
    <string name="dialog_add_media_description">How do you want to add the media?</string>
    <string name="dialog_add_media_camera_description">How would you like to capture the media?</string>
    <string name="dialog_remove_image">Change Media</string>
    <string name="dialog_remove_image_description">Are you sure you want to change this media?</string>
    <string name="dialog_discard_editmemory_title">Discard Edits</string>
    <string name="dialog_discard_editmemory_description">Are you sure you want to cancel editing this memory? This action cannot be undone.</string>
    <string name="dialog_discard_addmemory_title">Discard Memory</string>
    <string name="dialog_discard_addmemory_description">Are you sure you want to cancel creating this memory? This action cannot be undone.</string>


    <!-- Action -->
    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="action_video">Video</string>
    <string name="action_image">Image</string>
    <string name="action_remove">Remove</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_ok">Got it!</string>
    <string name="action_apply_settings">Apply Settings</string>
    <string name="action_change_memory_location">Change location</string>
    <string name="action_privacy_policy">View Privacy Policy</string>
    <string name="action_open_source">View Code on Github</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_skip">Skip</string>
    <string name="action_restart_tutorial">Restart Tutorial</string>
    <string name="action_set_password">Set Password</string>
    <string name="action_log_in">Log In</string>

    <!-- snackbar -->
    <string name="snackbar_description">Memories deleted</string>
    <string name="snackbar_undo">Undo</string>

    <!--toats-->
    <string name="Empty_adapter">No memories found</string>


    <!-- hint -->
    <string name="hint_description">Description, add the description of your memory here.</string>
    <string name="hint_date">Date</string>
    <string name="hint_title">Memory Title</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="hint_current_password">Current Password</string>

    <!-- errors -->
    <string name="error_title_too_short">Title cannot be shorter than 2 characters.</string>
    <string name="error_description_too_short">Description cannot be shorter than 2 characters.</string>
    <string name="error_could_not_set_current_location">Could not set memory location to current.</string>
    <string name="warn_enable_permissions">Enable location permissions</string>
    <string name="warn_enable_permissions_message">WHIB needs to know your location to save memories near you!</string>

    <string name="error_no_filter_match">No memories matching your filter</string>
    <string name="error_no_memories">No memories here yet!  Go out there and make some amazing ones!</string>
    <string name="error_no_search_match">No memories matching your query</string>
    <string name="error_passwords_dont_match">The passwords to not match</string>
    <string name="error_invalid_password">You did not enter the correct password!</string>
    <string name="error_password_empty">Your password cannot be empty!</string>

    <!-- Other -->
    <string name="desc_theme_preview">Theme Preview</string>
    <string name="string_delete_memory">Delete Memory</string>
    <string name="string_delete_memory_description">Are you sure you want to delete this memory? This action cannot be undone.</string>
    <string name="action_delete">Delete</string>
</resources>
