<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/fragment_map"
    >

    <fragment
        android:id="@+id/fragment_map"
        android:name="nl.hogeschoolrotterdam.projectb.fragment.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map"
        />

    <fragment
        android:id="@+id/fragment_memories"
        android:name="nl.hogeschoolrotterdam.projectb.fragment.MemoriesFragment"
        android:label="@string/menu_memories"
        tools:layout="@layout/fragment_memories"
        />

    <fragment
        android:id="@+id/fragment_search"
        android:name="nl.hogeschoolrotterdam.projectb.fragment.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search"
        />

    <fragment
        android:id="@+id/fragment_settings"
        android:name="nl.hogeschoolrotterdam.projectb.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"
        />

</navigation>