<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?colorSurface"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/ic_magnify"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_magnify"
            android:tint="?colorOnSurface"
            />

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@+id/ic_magnify"
            android:background="@null"
            android:hint="@string/str_enter_adress"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded"
            />


    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/relLayout1"
        android:scaleType="centerCrop"
        android:id="@+id/ic_gps"
        android:src="@drawable/ic_gps"
        />

    <LinearLayout
        android:id="@+id/tooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:background="?colorSecondary"
        android:elevation="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/tooltipText"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/str_tutorial_longpress"
            android:textColor="?colorOnSecondary"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            />

        <ImageView
            android:id="@+id/tooltipClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/close"
            android:padding="4dp"
            android:src="@drawable/ic_action_close"
            android:tint="?colorOnSecondary"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>