<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemoryDetailActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorSurface"
        android:theme="@style/Widget.MaterialComponents.ActionBar.Solid"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/memory_add_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_title"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memory_add_title_input"
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:nextFocusDown="@id/memory_add_date_input"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/memory_add_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_date"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memory_add_date_input"
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLines="1"
                    android:nextFocusDown="@id/memory_change_location_input"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/memory_change_location_input"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_change_memory_location"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/Marker_selector"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/marker_icons"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/memory_change_location_input"
                tools:listitem="@layout/support_simple_spinner_dropdown_item"
                />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:id="@+id/images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <ImageButton
                        android:id="@+id/add_media"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/add_media_icon"
                        />

                </LinearLayout>
            </HorizontalScrollView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/memory_add_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_description"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memory_add_description_input"
                    style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/memory_save_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_save"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

